fix: 替换scrollbar颜色

--- a/contents/input.less
+++ b/contents/input.less
@@ -27,7 +27,7 @@
   border-radius: 15px;
   max-height: 350px;
   overflow-y: auto;
-  scrollbar-color: pink palevioletred;
+  scrollbar-color: pink transparent;
   overflow-x: hidden;
   .list-item-title {
     max-width: 100%;
